[package]
name = "proptest-http"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"
repository = "https://github.com/vi/proptest-http"
description = "impl proptest::Arbitrary for http::{Request,Response,Uri}"
keywords = ["http", "proptest", "random", "arbitrary", "quickcheck"]
categories = ["development-tools::testing", "web-programming"]
license = "MIT/Apache-2.0"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proptest = "0.9.4"
http = "0.1.17"
